syntax = "proto3";

package server.admin;

import "google/protobuf/timestamp.proto";
import "v1/shared/Pager.proto";
import "google/protobuf/empty.proto";

option go_package = "server/api/v1";

message MessageIDRequest {
  string ID = 1;
}

message MessagesResponse {
  repeated MessageResponse messages = 1;
}

message GetMessageRequest {
  server.shared.Pager Pager = 1;
}

message MessageCreateRequest {
  string Title = 1;
  string Content = 2;
  google.protobuf.Timestamp DisplayDate = 5;
}

message MessageUpdateRequest {
  string ID = 1;
  optional string Title = 2;
  optional string Content = 3;
  optional google.protobuf.Timestamp DisplayDate = 4;
}

message MessageResponse {
  string ID = 1;
  string Title = 2;
  string Content = 3;
  string AuthorID = 4;
  google.protobuf.Timestamp DisplayDate = 5;
}

service MessageController {
  rpc GetByID(MessageIDRequest) returns (MessageResponse) {}
  rpc GetList(GetMessageRequest) returns (MessagesResponse) {}
  rpc Create(MessageCreateRequest) returns (MessageResponse) {}
  rpc Update(MessageUpdateRequest) returns (MessageResponse) {}
  rpc Delete(MessageIDRequest) returns (google.protobuf.Empty) {}
}